--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
       <version>2.13.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.juneau</groupId>
+      <artifactId>juneau-marshall</artifactId>
+      <version>8.2.0</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.json/json -->
     <dependency>
       <groupId>org.json</groupId>
